[Xelians] - Recharting CEA apps