@@ -42,7 +42,14 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.google.gson.FieldNamingPolicy;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.opencsv.bean.CsvToBean;
+import com.opencsv.bean.CsvToBeanBuilder;
+import com.opencsv.enums.CSVReaderNullFieldIndicator;
 import fr.gouv.vitam.access.external.common.exception.AccessExternalClientException;
+import fr.gouv.vitam.common.LocalDateUtil;
 import fr.gouv.vitam.common.client.VitamContext;
 import fr.gouv.vitam.common.database.builder.request.exception.InvalidCreateOperationException;
 import fr.gouv.vitam.common.database.builder.request.single.Select;
@@ -53,6 +60,8 @@ import fr.gouv.vitam.common.model.RequestResponse;
 import fr.gouv.vitam.common.model.administration.AccessContractModel;
 import fr.gouv.vitamui.commons.api.domain.DirectionDto;
 import fr.gouv.vitamui.commons.api.domain.PaginatedValuesDto;
+import fr.gouv.vitamui.commons.api.dtos.ErrorImportFile;
+import fr.gouv.vitamui.commons.api.enums.ErrorImportFileMessage;
 import fr.gouv.vitamui.commons.api.exception.BadRequestException;
 import fr.gouv.vitamui.commons.api.exception.ConflictException;
 import fr.gouv.vitamui.commons.api.exception.InternalServerException;
@@ -60,45 +69,64 @@ import fr.gouv.vitamui.commons.api.logger.VitamUILogger;
 import fr.gouv.vitamui.commons.api.logger.VitamUILoggerFactory;
 import fr.gouv.vitamui.commons.vitam.api.access.LogbookService;
 import fr.gouv.vitamui.commons.vitam.api.administration.AccessContractService;
+import fr.gouv.vitamui.iam.internal.client.ApplicationInternalRestClient;
+import fr.gouv.vitamui.iam.security.service.InternalSecurityService;
 import fr.gouv.vitamui.referential.common.dsl.VitamQueryHelper;
 import fr.gouv.vitamui.referential.common.dto.AccessContractDto;
 import fr.gouv.vitamui.referential.common.dto.AccessContractResponseDto;
-import fr.gouv.vitamui.referential.common.dto.AccessContractVitamDto;
 import fr.gouv.vitamui.referential.common.service.VitamUIAccessContractService;
+import fr.gouv.vitamui.referential.internal.server.utils.ExportCSVUtils;
+import fr.gouv.vitamui.referential.internal.server.utils.ImportCSVUtils;
+import org.apache.commons.io.input.BOMInputStream;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.io.InputStreamReader;
+import java.io.Reader;
+import java.nio.charset.StandardCharsets;
+import java.text.DateFormat;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.*;
 
 @Service
 public class AccessContractInternalService {
 
     private static final VitamUILogger LOGGER = VitamUILoggerFactory.getInstance(AccessContractInternalService.class);
 
-    private AccessContractService accessContractService;
+    private static final String ACCESS_CONTRACT = "ACCESS_CONTRACT";
 
-    private VitamUIAccessContractService vitamUIAccessContractService;
+    private final AccessContractService accessContractService;
 
-    private ObjectMapper objectMapper;
+    private final VitamUIAccessContractService vitamUIAccessContractService;
 
-    private AccessContractConverter converter;
+    private final ObjectMapper objectMapper;
 
-    private LogbookService logbookService;
+    private final AccessContractConverter converter;
+
+    private final LogbookService logbookService;
+
+    private final ApplicationInternalRestClient applicationInternalRestClient;
+
+    private final InternalSecurityService internalSecurityService;
 
     @Autowired
     public AccessContractInternalService(AccessContractService accessContractService,
         VitamUIAccessContractService vitamUIAccessContractService, ObjectMapper objectMapper,
-        AccessContractConverter converter, LogbookService logbookService) {
+        AccessContractConverter converter, LogbookService logbookService, ApplicationInternalRestClient applicationInternalRestClient, InternalSecurityService internalSecurityService) {
         this.accessContractService = accessContractService;
         this.vitamUIAccessContractService = vitamUIAccessContractService;
         this.objectMapper = objectMapper;
         this.converter = converter;
         this.logbookService = logbookService;
+        this.applicationInternalRestClient = applicationInternalRestClient;
+        this.internalSecurityService = internalSecurityService;
     }
 
     public AccessContractDto getOne(VitamContext vitamContext, String identifier) {
@@ -115,7 +143,7 @@ public class AccessContractInternalService {
                 return converter.convertVitamToDto(accessContractResponseDto.getResults().get(0));
             }
         } catch (VitamClientException | JsonProcessingException e) {
-            throw new InternalServerException("Unable to get Access Contrat", e);
+            throw new InternalServerException("Unable to get Access Contract", e);
         }
     }
 
@@ -131,7 +159,7 @@ public class AccessContractInternalService {
 
             return converter.convertVitamsToDtos(accessContractResponseDto.getResults());
         } catch (VitamClientException | JsonProcessingException e) {
-            throw new InternalServerException("Unable to get Access Contrats", e);
+            throw new InternalServerException("Unable to get Access Contracts", e);
         }
     }
 
@@ -140,7 +168,6 @@ public class AccessContractInternalService {
         Optional<String> criteria) {
 
         Map<String, Object> vitamCriteria = new HashMap<>();
-        JsonNode query = null;
         try {
             LOGGER.debug("List of Access Contract EvIdAppSession : {} ", vitamContext.getApplicationSessionId());
             if (criteria.isPresent()) {
@@ -149,19 +176,20 @@ public class AccessContractInternalService {
                 vitamCriteria = objectMapper.readValue(criteria.get(), typRef);
             }
 
-            query = VitamQueryHelper.createQueryDSL(vitamCriteria, pageNumber, size, orderBy, direction);
+            JsonNode query = VitamQueryHelper.createQueryDSL(vitamCriteria, pageNumber, size, orderBy, direction);
             LOGGER.debug("jsonQuery: {}", query);
+
+            AccessContractResponseDto results = this.findAll(vitamContext, query);
+            boolean hasMore = pageNumber * size + results.getHits().getSize() < results.getHits().getTotal();
+
+            final List<AccessContractDto> valuesDto = converter.convertVitamsToDtos(results.getResults());
+            return new PaginatedValuesDto<>(valuesDto, pageNumber, results.getHits().getSize(), hasMore);
+
         } catch (InvalidParseOperationException | InvalidCreateOperationException ioe) {
             throw new InternalServerException("Can't create dsl query to get paginated access contracts", ioe);
         } catch (IOException e) {
             throw new InternalServerException("Can't parse criteria as Vitam query", e);
         }
-
-        AccessContractResponseDto results = this.findAll(vitamContext, query);
-        boolean hasMore = pageNumber * size + results.getHits().getSize() < results.getHits().getTotal();
-
-        final List<AccessContractDto> valuesDto = converter.convertVitamsToDtos(results.getResults());
-        return new PaginatedValuesDto<>(valuesDto, pageNumber, results.getHits().getSize(), hasMore);
     }
 
     public AccessContractResponseDto findAll(VitamContext vitamContext, JsonNode query) {
@@ -189,103 +217,21 @@ public class AccessContractInternalService {
     }
 
     public AccessContractDto create(VitamContext vitamContext, AccessContractDto accessContractDto) {
+
+        LOGGER.debug("Creating Access Contract EvIdAppSession : {} ", vitamContext.getApplicationSessionId());
+        RequestResponse requestResponse;
         try {
-            LOGGER.debug("Create Access Contract EvIdAppSession : {} ", vitamContext.getApplicationSessionId());
-            RequestResponse requestResponse = accessContractService.createAccessContracts(vitamContext,
-                converter.convertDtosToVitams(Arrays.asList(accessContractDto)));
-            final AccessContractVitamDto accessContractVitamDto = objectMapper
-                .treeToValue(requestResponse.toJsonNode(), AccessContractVitamDto.class);
-            return converter.convertVitamToDto(accessContractVitamDto);
+            requestResponse = accessContractService.createAccessContracts(vitamContext, converter.convertDtosToVitams(List.of(accessContractDto)));
         } catch (InvalidParseOperationException | AccessExternalClientException | IOException e) {
             throw new InternalServerException("Can't create access contract", e);
         }
-    }
 
-    // FIXME ? Do an automatic transformation without passing from Map<lowerCase, Value> to vitamUIDto to vitamDto to Map<UpperCase, Value>
-    private JsonNode convertMapPartialDtoToUpperCaseVitamFields(Map<String, Object> partialDto) {
-
-        ObjectNode propertiesToUpdate = JsonHandler.createObjectNode();
-
-        // Transform Vitam-UI fields into Vitam fields
-        if (partialDto.get("name") != null) {
-            propertiesToUpdate.put("Name", (String) partialDto.get("name"));
-        }
-        if (partialDto.get("everyOriginatingAgency") != null) {
-            propertiesToUpdate.put("EveryOriginatingAgency", (boolean) partialDto.get("everyOriginatingAgency"));
-        }
-        if (partialDto.get("everyDataObjectVersion") != null) {
-            propertiesToUpdate.put("EveryDataObjectVersion", (boolean) partialDto.get("everyDataObjectVersion"));
-        }
-        if (partialDto.get("writingPermission") != null) {
-            propertiesToUpdate.put("WritingPermission", (boolean) partialDto.get("writingPermission"));
-        }
-        if (partialDto.get("writingRestrictedDesc") != null) {
-            propertiesToUpdate.put("WritingRestrictedDesc", (boolean) partialDto.get("writingRestrictedDesc"));
-        }
-        if (partialDto.get("description") != null) {
-            propertiesToUpdate.put("Description", (String) partialDto.get("description"));
-        }
-        if (partialDto.get("accessLog") != null) {
-            propertiesToUpdate.put("AccessLog", (String) partialDto.get("accessLog"));
-        }
-        if (partialDto.get("activationDate") != null) {
-            propertiesToUpdate.put("ActivationDate", (String) partialDto.get("activationDate"));
-        }
-        if (partialDto.get("deactivationDate") != null) {
-            propertiesToUpdate.put("DeactivationDate", (String) partialDto.get("deactivationDate"));
-        }
-        if (partialDto.get("lastUpdate") != null) {
-            propertiesToUpdate.put("LastUpdate", (String) partialDto.get("lastUpdate"));
-        }
-        if (partialDto.get("creationDate") != null) {
-            propertiesToUpdate.put("CreationDate", (String) partialDto.get("creationDate"));
-        }
-        if (partialDto.get("status") != null) {
-            propertiesToUpdate.put("Status", (String) partialDto.get("status"));
+        if (requestResponse == null || HttpStatus.OK.value() != requestResponse.getHttpCode()) {
+            throw new BadRequestException("Could not create access contract in vitam");
         }
 
-        if (partialDto.get("rootUnits") != null) {
-            ArrayNode array = JsonHandler.createArrayNode();
-            for (String value : (List<String>) partialDto.get("rootUnits")) {
-                array.add(value);
-            }
-            propertiesToUpdate.set("RootUnits", array);
-        }
-
-        if (partialDto.get("excludedRootUnits") != null) {
-            ArrayNode array = JsonHandler.createArrayNode();
-            for (String value : (List<String>) partialDto.get("excludedRootUnits")) {
-                array.add(value);
-            }
-            propertiesToUpdate.set("ExcludedRootUnits", array);
-        }
-
-        if (partialDto.get("ruleCategoryToFilter") != null) {
-            ArrayNode array = JsonHandler.createArrayNode();
-            for (String value : (List<String>) partialDto.get("ruleCategoryToFilter")) {
-                array.add(value);
-            }
-            propertiesToUpdate.set("RuleCategoryToFilter", array);
-        }
-
-        if (partialDto.get("originatingAgencies") != null) {
-            ArrayNode array = JsonHandler.createArrayNode();
-            for (String value : (List<String>) partialDto.get("originatingAgencies")) {
-                array.add(value);
-            }
-            propertiesToUpdate.set("OriginatingAgencies", array);
-        }
-
-
-        if (partialDto.get("dataObjectVersion") != null) {
-            ArrayNode array = JsonHandler.createArrayNode();
-            for (String value : (List<String>) partialDto.get("dataObjectVersion")) {
-                array.add(value);
-            }
-            propertiesToUpdate.set("DataObjectVersion", array);
-        }
-
-        return propertiesToUpdate;
+        // Vitam does not return any AccessContractDto so we return the given one successfully created
+        return accessContractDto;
     }
 
     public AccessContractDto patch(VitamContext vitamContext, final Map<String, Object> partialDto) {
@@ -300,10 +246,17 @@ public class AccessContractInternalService {
             LOGGER.debug("Patch Access Contract EvIdAppSession : {} ", vitamContext.getApplicationSessionId());
             // Fix because Vitam doesn't allow String Array as action value (transformed to a string representation"[value1, value2]"
             // Manual setting instead of updateRequest.addActions( UpdateActionHelper.set(fieldsUpdated));
-            JsonNode fieldsUpdated = convertMapPartialDtoToUpperCaseVitamFields(partialDto);
-            ObjectNode action = JsonHandler.createObjectNode().set("$set", fieldsUpdated);
-            ArrayNode actions = JsonHandler.createArrayNode().add(action);
-            ObjectNode query = JsonHandler.createObjectNode().set("$action", actions);
+            JsonNode fieldsUpdated = converter.convertToUpperCaseFields(partialDto);
+
+            ObjectNode action = JsonHandler.createObjectNode();
+            action.set("$set", fieldsUpdated);
+
+            ArrayNode actions = JsonHandler.createArrayNode();
+            actions.add(action);
+
+            ObjectNode query = JsonHandler.createObjectNode();
+            query.set("$action", actions);
+
             LOGGER.debug("Send AccessContract update request: {}", query);
 
             vitamUIAccessContractService.patchAccessContract(vitamContext, id, query);
@@ -314,12 +267,123 @@ public class AccessContractInternalService {
     }
 
     public JsonNode findHistoryByIdentifier(VitamContext vitamContext, final String id) throws VitamClientException {
-        LOGGER.debug("Find History Access Contract By ID {}, EvIdAppSession : {}", id,
-            vitamContext.getApplicationSessionId());
+        LOGGER.debug("Find History Access Contract By ID {}, EvIdAppSession : {}", id, vitamContext.getApplicationSessionId());
+
         try {
             return logbookService.selectOperations(VitamQueryHelper.buildOperationQuery(id), vitamContext).toJsonNode();
         } catch (InvalidCreateOperationException e) {
             throw new InternalServerException("Unable to fetch history", e);
         }
+    }
+
+    public ResponseEntity<Void> importAccessContracts(VitamContext context, MultipartFile file) {
+
+        Boolean isIdentifierMandatory = applicationInternalRestClient.isApplicationExternalIdentifierEnabled(internalSecurityService.getHttpContext(), ACCESS_CONTRACT).getBody();
+
+        if (isIdentifierMandatory == null) {
+            throw new InternalServerException("The result of the API call should not be null");
+        }
+
+        AccessContractCSVUtils.checkImportFile(file, isIdentifierMandatory);
+        LOGGER.debug("access contracts file {} has been validated before parsing it", file.getOriginalFilename());
+
+        List<AccessContractCSVDto> accessContract = convertCsvFileToAccessContractsDto(file);
+        LOGGER.debug("access contracts file {} has been parsed in accessContract List", file.getOriginalFilename());
+
+        Gson gson = new GsonBuilder()
+            .setFieldNamingPolicy(FieldNamingPolicy.UPPER_CAMEL_CASE)
+            .create();
+        String jsonString = gson.toJson(accessContract);
+        LOGGER.debug("access contracts file {} has been parsed in JSON String", file.getOriginalFilename());
+
+        RequestResponse<?> result;
+        try {
+            result = accessContractService.createAccessContracts(context, new ByteArrayInputStream(jsonString.getBytes()));
+            LOGGER.debug("access contracts file {} has been send to VITAM", file.getOriginalFilename());
+        } catch (InvalidParseOperationException | AccessExternalClientException e) {
+            throw new InternalServerException("Unable to import access contracts file " + file.getOriginalFilename() + " : ", e);
+        }
+
+        if (HttpStatus.OK.value() == result.getHttpCode()) {
+            LOGGER.debug("access contracts file {} has been successfully import to VITAM", file.getOriginalFilename());
+            return new ResponseEntity<>(HttpStatus.CREATED);
+        }
+
+        throw new BadRequestException("The CSV file has been rejected by vitam", null, List.of(ImportCSVUtils.errorToJson(ErrorImportFile.builder().error(ErrorImportFileMessage.REJECT_BY_VITAM_CHECK_LOGBOOK_OPERATION_APP).build())));
+
+    }
+
+    private List<AccessContractCSVDto> convertCsvFileToAccessContractsDto(MultipartFile file) {
+        try (Reader reader = new InputStreamReader(new BOMInputStream(file.getInputStream()), StandardCharsets.UTF_8)) {
+            CsvToBean<AccessContractCSVDto> csvToBean = new CsvToBeanBuilder<AccessContractCSVDto>(reader)
+                .withType(AccessContractCSVDto.class)
+                .withIgnoreLeadingWhiteSpace(true)
+                .withFieldAsNull(CSVReaderNullFieldIndicator.BOTH)
+                .withSeparator(';')
+                .build();
+
+            return csvToBean.parse();
+        } catch (RuntimeException | IOException e) {
+            throw new BadRequestException("Unable to read access contracts CSV file " + file.getOriginalFilename(), e);
+        }
+    }
+
+    public Resource exportAccessContracts(VitamContext vitamContext) {
+
+        final List<AccessContractDto> accessContracts = getAll(vitamContext);
+
+        ExportAccessContracts exporter = new ExportAccessContracts();
+
+        final List<String[]> csvLines = new ArrayList<>();
+
+        // headers
+        csvLines.add(exporter.getHeaders().toArray(new String[exporter.getSize()]));
+
+        SimpleDateFormat dateFormat = new SimpleDateFormat(exporter.getPatternDate());
+
+        // rows
+        accessContracts.forEach(accessContract -> {
+            try {
+                csvLines.add(buildAccessContractExportValues(accessContract, exporter.getArrayJoinStr(), dateFormat));
+            } catch (ParseException e) {
+                throw new BadRequestException("Unable to parse access contract to a csv line", e);
+            }
+        });
+
+        return ExportCSVUtils.generateCSVFile(csvLines, exporter.getSeparator());
+    }
+
+    private String[] buildAccessContractExportValues(final AccessContractDto accessContract, final String arrayJoinStr, final DateFormat df) throws ParseException {
+        final String originatingAgencies = accessContract.getOriginatingAgencies() == null ? null : String.join(arrayJoinStr, accessContract.getOriginatingAgencies());
+        final String dataObjectVersions = accessContract.getDataObjectVersion() == null ? null : String.join(arrayJoinStr, accessContract.getDataObjectVersion());
+        final String rootUnits = accessContract.getRootUnits() == null ? null : String.join(arrayJoinStr, accessContract.getRootUnits());
+        final String excludedRootUnits = accessContract.getExcludedRootUnits() == null ? null : String.join(arrayJoinStr, accessContract.getExcludedRootUnits());
+        final String ruleCategoryToFilter = accessContract.getRuleCategoryToFilter() == null ? null : String.join(arrayJoinStr, accessContract.getRuleCategoryToFilter());
+
+        final var creationDate = accessContract.getCreationDate() == null ? null : df.format(LocalDateUtil.getDate(accessContract.getCreationDate()));
+        final var lastUpdateDate = accessContract.getLastUpdate() == null ? null : df.format(LocalDateUtil.getDate(accessContract.getLastUpdate()));
+        final var activationDate = accessContract.getActivationDate() == null ? null : df.format(LocalDateUtil.getDate(accessContract.getActivationDate()));
+        final var deactivationDate = accessContract.getDeactivationDate() == null ? null : df.format(LocalDateUtil.getDate(accessContract.getDeactivationDate()));
+
+        return new String[]{
+            accessContract.getIdentifier(),
+            accessContract.getName(),
+            accessContract.getDescription(),
+            accessContract.getStatus(),
+            accessContract.getWritingPermission().toString(),
+            accessContract.getEveryOriginatingAgency().toString(),
+            originatingAgencies,
+            accessContract.getEveryDataObjectVersion().toString(),
+            dataObjectVersions,
+            rootUnits,
+            excludedRootUnits,
+            accessContract.getAccessLog(),
+            ruleCategoryToFilter,
+            accessContract.getWritingRestrictedDesc().toString(),
+            creationDate,
+            lastUpdateDate,
+            activationDate,
+            deactivationDate
+        };
     }
 }
